--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -10,7 +10,7 @@ h1 {
     text-align: center;
 }
 button {
-    margin: 10px auto;
+    margin: .5px auto;
     display: block;
     padding: 10px 20px;
     background-color: #007bff;
@@ -43,4 +43,3 @@ nav {
   nav a:hover {
     text-decoration: underline;
   }
-
